Fixes the color of menu on small screen

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -7,4 +7,5 @@ $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 @include mat-button-theme($my-app-theme);
 @include mat-icon-theme($my-app-theme);
 @include mat-badge-theme($my-app-theme);
+@include mat-menu-theme($my-app-theme);
 @include angular-material-theme($my-app-theme);
